--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "indexer",
   "main": "public/electron.js",
-  "version": "1.3.0-alpha",
+  "version": "1.0.0",
   "description": "Application, simplifying data input for Poznan Project collborators",
-  "private": true,
   "homepage": "./",
   "dependencies": {
     "array-move": "^2.1.0",
@@ -33,32 +32,30 @@
     "react-modal": "^3.8.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.0.4",
     "react-switch": "^5.0.0",
     "react-toastify": "^5.3.1",
     "react-web-tabs": "^1.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "typescript": "^3.5.3",
     "utf-8-validate": "^5.0.2"
   },
   "scripts": {
     "start": "rescripts start",
-    "build": "rescripts build",
     "test": "rescripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"set BROWSER=none&npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "concurrently \"npm run start\" \"wait-on http://localhost:3000 && electron .\"",
     "postinstall": "electron-builder install-app-deps",
-    "preelectron-pack:win": "npm run build",
-    "preelectron-pack:lin": "npm run build",
-    "electron-pack:win": "build -w",
-    "electron-pack:lin": "build -l"
+    "build:react": "rescripts build",
+    "preelectron-pack:win": "npm run build:react",
+    "preelectron-pack:lin": "npm run build:react",
+    "preelectron-pack:mac": "npm run build:react",
+    "build:win": "build -w",
+    "build:lin": "build -l",
+    "build:max": "build -m"
   },
-  "author": {
-    "name": "Alex",
-    "email": "ialexi.jhc@gmail.com"
-  },
+  "author": "ialexi-bl",
   "build": {
     "appId": "com.alex.indexer",
     "productName": "Indexer",
@@ -74,9 +71,6 @@
       "buildResources": "assets"
     }
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -90,12 +84,23 @@
     ]
   },
   "devDependencies": {
-    "@rescripts/cli": "^0.0.11",
+    "@rescripts/cli": "0.0.11",
     "@rescripts/rescript-env": "^0.0.10",
-    "concurrently": "^4.1.1",
-    "electron": "^5.0.6",
+    "concurrently": "^4.1.2",
+    "electron": "5.0.6",
     "electron-builder": "^20.44.4",
-    "wait-on": "^3.2.0"
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.2",
+    "wait-on": "^3.3.0"
   },
   "keywords": [
     "Poznan Project",
