--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-react-titlebar": "^0.8.1",
     "exceljs": "^1.13.0",
+    "fibers": "^5.0.0",
     "i18next": "^17.0.6",
     "i18next-electron-language-detector": "^0.0.10",
     "nedb": "^1.8.0",
@@ -39,6 +40,7 @@
     "react-web-tabs": "^1.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.27.0",
     "utf-8-validate": "^5.0.2"
   },
   "scripts": {
@@ -48,9 +50,9 @@
     "electron-dev": "concurrently \"npm run start\" \"wait-on http://localhost:3000 && electron .\"",
     "postinstall": "electron-builder install-app-deps",
     "build:react": "rescripts build",
-    "preelectron-pack:win": "npm run build:react",
-    "preelectron-pack:lin": "npm run build:react",
-    "preelectron-pack:mac": "npm run build:react",
+    "prebuild:win": "npm run build:react",
+    "prebuild:lin": "npm run build:react",
+    "prebuild:mac": "npm run build:react",
     "build:win": "build -w",
     "build:lin": "build -l",
     "build:max": "build -m"
@@ -60,11 +62,13 @@
     "appId": "com.alex.indexer",
     "productName": "Indexer",
     "copyright": "Copyright © 2019 ${author}",
+    "extends": null,
     "mac": {
       "category": "public.app-category.utilities"
     },
     "files": [
       "build/**/*",
+      "public/electron.js",
       "node_modules/**/*"
     ],
     "directories": {
@@ -87,7 +91,7 @@
     "@rescripts/cli": "0.0.11",
     "@rescripts/rescript-env": "^0.0.10",
     "concurrently": "^4.1.2",
-    "electron": "5.0.6",
+    "electron": "^10.1.5",
     "electron-builder": "^20.44.4",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
